<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewJava"
    android:background="@drawable/overviewbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="JAVA OVERVIEW"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/didact_gothic"
            android:paddingTop="15dp"
            android:text="@string/java_overview"
            android:textSize="20dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Why to Learn java Programming?"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/didact_gothic"
            android:paddingTop="15dp"
            android:text="@string/whytolearnjava"
            android:textSize="20dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/didact_gothic"
            android:paddingTop="15dp"
            android:text="@string/whytolearnjava1"
            android:textSize="17dp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/didact_gothic"
            android:paddingTop="15dp"
            android:text="@string/whytolearnjava2"
            android:textSize="17dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/didact_gothic"
            android:paddingTop="15dp"
            android:text="@string/whytolearnjava3"
            android:textSize="17dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="To know more, you can also refer To:"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"
            />

        <TextView
            android:id="@+id/overviewlink"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hyperlink"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"
            />




    </LinearLayout>

</ScrollView>