<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loopjava"
    android:background="@drawable/overviewbackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="JAVA LOOPS"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"/>

        <TextView
            android:id="@+id/javaforloop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/didact_gothic"
            android:paddingTop="15dp"
            android:text="@string/javaforloop"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/javaforeachloop"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/javaforeachloop"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"/>

        <TextView
            android:id="@+id/javawhiledowhile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/javawhiledowhile"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"/>











    </LinearLayout>
</ScrollView>